<?xml version="1.0"?>
<package format="3">
  <name>gap_follow_controller</name>
  <version>0.0.0</version>
  <description>Controlador Follow the Gap para F1Tenth</description>
  <maintainer email="akiro@todo.todo">akiro</maintainer>
  <license>MIT</license>

  <!-- Dependencias básicas para paquetes Python -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencias en tiempo de ejecución -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Dependencias opcionales para testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
